--- a/go/web/template/user.html
+++ b/go/web/template/user.html
@@ -14,6 +14,9 @@
       <button class="btn-logout" onclick="window.location.href='/logout'">
         Logout
       </button>
+      <button onclick="window.location.href='/userinfo'">
+        Call /userinfo
+      </button>
     </div>
     <section>
       <h3>ID Token Claims</h3>
